<resources>
    <string name="app_name">CheckBox</string>
    <string name="inputMoney">Ввод денег</string>
    <string name="inputInfo">Информация об оплате</string>
    <string name="btnOK">Ok</string>
    <string name="bankCardChkBx">С банковской карты</string>
    <string name="mobilePhoneChkBx">С мобильного телефона</string>
    <string name="cashAddressChkBx">Наличными по адресу</string>
</resources>