<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="737dp"
        android:orientation="vertical"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/inputMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inputMoney"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/inputInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/inputInfo" />

        <CheckBox
            android:id="@+id/bankCardChkBx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bankCardChkBx"
            android:onClick="clickBankCardChkBx"/>

        <CheckBox
            android:id="@+id/mobilePhoneChkBx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobilePhoneChkBx"
            android:onClick="clickMobilePhoneChkBx"/>

        <CheckBox
            android:id="@+id/cashAddressChkBx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cashAddressChkBx"
            android:onClick="clickCashAddressChkBx"/>

        <Button
            android:id="@+id/btnOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickOk"
            android:text="@string/btnOK" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>